# embed

./: CMakeLists.txt  embed.qmlproject  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/embed/: CMakeLists.txt  qmldir
imports/embed/designer/: plugin.metainfo
src/: import_qml_plugins.h  videoprocesser.cpp  videoprocesser.h  wmfactory.cpp  wmfactory.h  wmproc.h
